--- a/dfdask.ipynb
+++ b/dfdask.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "The error appears when trying to load a json file into a Dask DataFrame with the `blocksize` option with some specific number of records, in this example: 191 records. The error seem to not depend on some specific record, e.g the first one or the last one, or any subset as displayed below:\n",
     "\n",
-    "The solution is given here: \n",
+    "The solution is given here: https://stackoverflow.com/a/55027036/2268280\n",
     "\n",
     "> You might consider increasing the size of the sample that Dask reads when determining metadata like column names.\n",
     "```python\n",
